--- a/app/src/main/res/layout/content_hello_world.xml
+++ b/app/src/main/res/layout/content_hello_world.xml
@@ -14,8 +14,8 @@
     tools:showIn="@layout/activity_hello_world">
 
     <TextView
+        android:id="@+id/hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!!!"
-        tools:ignore="HardcodedText" />
+        android:text="@string/hello" />
 </RelativeLayout>
