--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,6 +25,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_title"
-        android:text="Hello World"
-        tools:ignore="HardcodedText" />
+        android:text="@string/hello" />
 </RelativeLayout>
